kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-service
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/name: sample-service
