kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: sample-service
spec:
  selector:
    app.kubernetes.io/name: sample-service
  ports:
    - name: http
      port: 8080
      targetPort: http
